--- a/statistical_inference/homework/homework4.Rmd
+++ b/statistical_inference/homework/homework4.Rmd
@@ -9,89 +9,168 @@ output: html_document
 Load the data set mtcars in the datasets R package. Assume that the data set mtcars is a random sample. Compute the mean MPG, $\bar{x}$, of this sample.  
 You want to test whether the true MPG is $\mu_0$ or smaller using a one sided 5% level test. ($H_0:\mu=\mu_0$ versus $H_a:\mu<\mu_0$). Using that data set and a Z test:  
 
-1. Based on the mean MPG of the sample $\bar{x}, and by using a Z test: what is the smallest value of $\mu_0$ that you would reject for (to two decimal places)?
+1. Based on the mean MPG of the sample $\bar{x}$, and by using a Z test: what is the smallest value of $\mu_0$ that you would reject for (to two decimal places)?
 
 ```{r}
 library(datasets)
 attach(mtcars)
 mn <- mean(mtcars$mpg)
 s <- sd(mtcars$mpg)
-z <- qnorm(.05)
-mu0 <- mn - z * s / sqrt(nrow(mtcars))
-mean_mpg + qnorm()
+n <- length(mtcars$mpg)
+round(mn + c(-1,1) * qnorm(0.05) * s / sqrt(n),2)
 ```
+
+**Answer: 21.84**  
+**Note:** It's easy to get tripped up in this problem on signs. If you get a value that's less than $\bar{X}$, then clearly it's wrong, since you'd never reject for $H_0:\mu=\mu_0$ versus $H_a < \mu_0$ if $\mu_0$ was less than your observed mean. Also note the answer to "What is the largest value for which you would reject for?" is infinity.
 
 
 ## Question 2  
 Consider again the mtcars dataset. Use a two group t-test to test the hypothesis that the 4 and 6 cyl cars have the same mpg. Use a two sided test with unequal variances.  
 
-1. Do you reject at the 5% level (enter 0 for no, 1 for yes).  
-2. What is the P-value to 4 decimal places expressed as a proportion?  
+1. Do you reject at the 5% level (enter 0 for no, 1 for yes). **YES**
+2. What is the P-value to 4 decimal places expressed as a proportion? **0.0004**  
 
+```{r}
+t.test(mtcars$mpg[cyl == 4],mtcars$mpg[cyl == 6], var.equal = FALSE)
+```
+
+Just the p-value:  
+```{r}
+round(t.test(mtcars$mpg[cyl == 4],mtcars$mpg[cyl == 6], var.equal = FALSE)$p.value,4)
+```
 
 ## Question 3  
 A sample of 100 men yielded an average PSA level of 3.0 with a sd of 1.1. What are the complete set of values that a 5% two sided Z test of $H_0:\mu=\mu_0$ would fail to reject the null hypothesis for?  
 
-1. Enter the lower value to 2 decimal places.  
-2. Enter the upper value to 2 decimal places.   
+1. Enter the lower value to 2 decimal places. **2.78**
+2. Enter the upper value to 2 decimal places. **3.22**
 
-
+```{r}
+round(3.0 + c(-1,1)*qnorm(0.975)*1.1/sqrt(100),2)
+```
 ## Question 4  
 You believe the coin that you're flipping is biased towards heads. You get 55 heads out of 100 flips.  
 
-1. What's the exact relevant pvalue to 4 decimal places (expressed as a proportion)?  
-2. Would you reject a 1 sided hypothesis at $\alpha=.05$? (0 for no 1 for yes)?  
+1. What's the exact relevant pvalue to 4 decimal places (expressed as a proportion)? **0.1841**  
+2. Would you reject a 1 sided hypothesis at $\alpha=.05$? (0 for no 1 for yes)? **0 - NO**  
+
+```{r}
+round(pbinom(54, size=100, prob = 0.5, lower.tail = FALSE),4)
+```
 
 
 ## Question 5  
 A web site was monitored for a year and it received 520 hits per day. In the first 30 days in the next year, the site received 15,800 hits. Assuming that web hits are Poisson.  
 
-1. Give an exact one sided P-value to the hypothesis that web hits are up this year over last to four significant digits (expressed as a proportion).  
-2. Does the one sided test reject (0 for no 1 for yes)?
+1. Give an exact one sided P-value to the hypothesis that web hits are up this year over last to four significant digits (expressed as a proportion). **0.0553**  
+2. Does the one sided test reject (0 for no 1 for yes)? **0 - NO** not less than $\alpha$
+
+```{r}
+round(ppois(15800-1,520*30,lower.tail = FALSE),4)
+```
+
+Same using normal 
+```{r}
+pnorm(15800-1,mean=520*30,sd=sqrt(520*30),lower.tail = FALSE)
+```
+
+**Remember:** in poisson distribution mu = lambda * rate = variance
 
 
 ## Question 6  
 Suppose that in an AB test, one advertising scheme led to an average of 10 purchases per day for a sample of 100 days, while the other led to 11 purchaces per day, also for a sample of 100 days. Assuming a common standard deviation of 4 purchases per day. Assuming that the groups are independent and that they days are iid, perform a Z test of equivalence. 
 
-1. What is the P-value reported to 3 digits expressed as a proportion?  
-2. Do you reject the test? (0 for no 1 for yes).
+1. What is the P-value reported to 3 digits expressed as a proportion? **0.077**
+2. Do you reject the test? (0 for no 1 for yes). **0 - NO**  
+
+```{r}
+m1 <- 10; m2 <- 11
+n1 <- n2 <- 100
+s <- 4
+se <- s * sqrt(1 / n1 + 1 / n2)
+ts <- (m2 - m1) / se
+pv <- round(2 * pnorm(-abs(ts)),3)
+#p.value
+pv
+```
 
 
 ## Question 7  
 A confidence interval for the mean contains:  
 
-* All of the values of the hypothesized mean for which we would fail to reject with $\alpha=1−Conf.Level$.
-* All of the values of the hypothesized mean for which we would fail to reject with $2\alpha=1−Conf.Level$.
-* All of the values of the hypothesized mean for which we would reject with $\alpha=1−Conf.Level$.
-* All of the values of the hypothesized mean for which we would reject with $2\alpha=1−Conf.Level$.
+* **[X]** All of the values of the hypothesized mean for which we would fail to reject with $\alpha=1−Conf.Level$.  
+    **NOTE:** refer to 09_HT lesson pg 15. 
+* [ ] All of the values of the hypothesized mean for which we would fail to reject with $2\alpha=1−Conf.Level$.
+* [ ] All of the values of the hypothesized mean for which we would reject with $\alpha=1−Conf.Level$.
+* [ ] All of the values of the hypothesized mean for which we would reject with $2\alpha=1−Conf.Level$.
 
 
 ## Question 8  
 Consider two problems previous. Assuming that 10 purchases per day is a benchmark null value, that days are iid and that the standard deviation is 4 purchases for day. Suppose that you plan on sampling 100 days. What would be the power for a one sided 5% Z mean test that purchases per day have increased under the alternative of $\mu=11$ purchase per day?
 
-1. Give your result as a proportion to 3 decimal places.
+1. Give your result as a proportion to 3 decimal places. **0.804**
+
+```{r}
+mu0 <- 10
+mua <- 11
+sigma = 4
+n = 100
+alpha <- 0.05
+z <- qnorm(1 - alpha)
+round(pnorm(mu0 + z * sigma/sqrt(n), 
+            mean = mua, sd = sigma/sqrt(n), lower.tail = FALSE),3)
+```
+
 
 ## Question 9  
 Researchers would like to conduct a study of healthy adults to detect a four year mean brain volume loss of .01 mm3. Assume that the standard deviation of four year volume loss in this population is .04 mm3.  
 
-1. What is necessary sample size for the study for a 5% one sided test versus a null hypothesis of no volume loss to achieve 80% power? (Always round up)
+1. What is necessary sample size for the study for a 5% one sided test versus a null hypothesis of no volume loss to achieve 80% power? (Always round up) **99**  
+
+```{r}
+(qnorm(.95) + qnorm(.8)) ^ 2 * .04 ^ 2 / .01^2
+```
 
 
 ## Question 10  
 In a court of law, all things being equal, if via policy you require a lower standard of evidence to convict people then  
 
 * Less guilty people will be convicted.  
-* More innocent people will be convicted.  
+* **[X]** More innocent people will be convicted.  
 * More Innocent people will be not convicted.  
 
 
 ## Question 11  
 Consider the mtcars data set.
 
-1. Give the p-value for a t-test comparing MPG for 6 and 8 cylinder cars assuming equal variance, as a proportion to 3 decimal places.
-2. Give the associated P-value for a z test.
+1. Give the p-value for a t-test comparing MPG for 6 and 8 cylinder cars assuming equal variance, as a proportion to 3 decimal places. **0**
+2. Give the associated P-value for a z test. 
 3. Give the common standard deviation estimate for MPG across cylinders to 3 decimal places.
 4. Would the t test reject at the two sided 0.05 level (0 for no 1 for yes)?
+
+```{r}
+m8 <- mtcars$mpg[mtcars$cyl == 8]
+m6 <- mtcars$mpg[mtcars$cyl == 6]
+t.test(m6,m8, var.equal = TRUE)
+
+# normal probability
+2*pnorm(-1*t.test(m6,m8, var.equal = TRUE)$statistic)
+
+
+mn6 <- mean(m6)
+mn8 <- mean(m8)
+s6 <- sd(m6)
+s8 <- sd(m8)
+n6 <- length(m6)
+n8 <- length(m8)
+
+# standard deviation estimate (pooled variance)
+sp <- sqrt(((n6 - 1)*s6^2 + (n8 -1)*s8^2)/(n6+n8-2))
+
+# z statistics
+(mn6 - mn8) / (sp * sqrt(1/n6 + 1/n8 ))
+
+```
 
 
 ## Question 12  
