--- a/regmods/regmods_exercises.Rmd
+++ b/regmods/regmods_exercises.Rmd
@@ -13,7 +13,7 @@ data(galton)
 
 1. Consider the dataset given by x=c(0.725,0.429,-0.372 ,0.863). What value of mu minimizes sum((x - mu)^2)?
 
-$X_bar$ is the value of mu that minimizes for a dataset.
+$\bar{X}$ is the value of mu that minimizes for a dataset.
 
 ```{r}
 x <- c(0.725,0.429,-0.372 ,0.863)
@@ -26,7 +26,7 @@ mean(x)
 x <- c(0.725,0.429,-0.372 ,0.863)
 w <- c(2, 2, 1, 1)
 xw <- x * w
-mean(xw)
+sum(x*w)/sum(w)
 ```
 
 3. Take the Galton and obtain the regression through the origin slope estimate where the centered parental height is the outcome and the child’s height is the predictor.
@@ -226,20 +226,21 @@ beta1 = 0.3 * 1/2
 
 ## Regression to the Mean
 
-1. You have two noisy scales and a bunch of people that you’d like to weigh. You weigh each person on both scales. The correlation was 0.75. If you normalized each set of weights, what would you have to multiply the weight on one scale to get a good estimate of the weight on the other scale?
+1. You have two noisy scales and a bunch of people that you’d like to weigh. You weigh each person on both scales. The correlation ($\rho$) was 0.75. If you normalized each set of weights, what would you have to multiply the weight on one scale to get a good estimate of the weight on the other scale?
 
-```{r}
+Since data is normal $\beta_1 = \rho$ and there is no intercept, you only need to multiple by $\beta_1$ or 0.75. 
 
-```
 
 2. Consider the previous problem. Someone’s weight was 2 standard deviations above the mean of the group on the first scale. How many standard deviations above the mean would you estimate them to be on the second?
 
-```{r}
-
-```
+Given someone's weight is 2 standard deviations on one scale, we only need to multiple this by the $\beta_1$ from previous problem. So the answer is 2 * 0.75 = 1.5
 
 3. You ask a collection of husbands and wives to guess how many jellybeans are in a jar. The correlation is 0.2. The standard deviation for the husbands is 10 beans while the standard deviation for wives is 8 beans. Assume that the data were centered so that 0 is the mean for each. The centered guess for a husband was 30 beans (above the mean). What would be your best estimate of the wife’s guess?
 
 ```{r}
-
+rho = 0.2
+hs = 10
+ws = 8
+b1 = rho * 8/10
+30 * b1
 ```
